logs/Slang/chapter-7/arrays/associative/literals.sv.log
name: associative-arrays-literals
description: Test associative arrays literals support
should_fail: 0
tags: 7.9.11 7.8
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/literals.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/literals.sv:9:15: error: expected expression
string words [int] = '{default: "hello"};
              ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/literals.sv:9:22: error: language feature not yet supported
string words [int] = '{default: "hello"};
                     ^~~~~~~~~~~~~~~~~~~
